2004-05-05 Braden McDaniel  <braden@endoframe.com>

	Made the Mozilla plug-in scriptable.  Only a trivial amount of
	functionality is currently exposed: you can get the name and
	version of the plug-in.

	* openvrml.spec.in:  Install the type library.
	* mozilla-plugin/configure.ac:  Locate Mozilla's components
	directory.
	* mozilla-plugin/src/Makefile.am
	* mozilla-plugin/src/openvrml.cpp
	* mozilla-plugin/src/openvrml.idl:  Added file.  An adaptation
	of the VRML97 EAI to XPCOM.

2004-05-03 Braden McDaniel  <braden@endoframe.com>

	* README:  Fixed note regarding building against a Java
	Development Kit.

2004-05-02 Braden McDaniel  <braden@endoframe.com>

	Fixed errors caught by gcc 3.4.

	* src/libopenvrml/openvrml/ScriptJDK.cpp
	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp

2004-04-29 Braden McDaniel  <braden@endoframe.com>

	Made building the Mozilla plug-in optional.

	* README
	* configure.ac
	* mozilla-plugin/configure.ac
	* mozilla-plugin/src/Makefile.am

2004-04-27 Braden McDaniel  <braden@endoframe.com>

	Removed Microsoft Visual C++ 7.0 project files.

	* ide-projects/Makefile.am
	* ide-projects/Windows/VisualC7/OpenVRML/OpenVRML.sln:  Removed
	file.
	* ide-projects/Windows/VisualC7/OpenVRML/antlr/antlr.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7/OpenVRML/lookat/lookat.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml/openvrml.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml-gl/openvrml-gl.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7/OpenVRML/regex/regex.vcproj:
	Removed file.

2004-04-26 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/configure.ac:  Removed unused Makefile from
	AC_OUTPUT.

2004-04-26 Braden McDaniel  <braden@endoframe.com>

	Added a Mozilla plug-in.

	* Makefile.am
	* configure.ac
	* openvrml.spec.in
	* mozilla-plugin/Makefile.am:  Added file.
	* mozilla-plugin/configure.ac:  Added file.